--- a/angular/todo/src/app/components/navbar/navbar.component.html
+++ b/angular/todo/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="w-96 mb-10 flex flex-grow-0">
+<nav class="w-96 mb-10 flex flex-grow-0 text-gray-400">
     <ul class="w-full flex justify-between">
-        <li><a [routerLink]="['/home']">Home</a></li>
-        <li class="text-gray-400"><a [routerLink]="['/settings']">Settings</a></li>
+        <li><a routerLinkActive="text-teal-500 font-semibold" [routerLink]="['/home']">Home</a></li>
+        <li><a routerLinkActive="text-teal-500 font-semibold" [routerLink]="['/settings']">Settings</a></li>
     </ul>
 </nav>
