--- a/angular/todo/src/app/components/footer/footer.component.html
+++ b/angular/todo/src/app/components/footer/footer.component.html
@@ -1,3 +1,5 @@
-<div class="flex flex-grow-0">
-    <p class="text-sm text-gray-600">Created by borja using angular, tailwind and supabase.</p>
-</div>
+<footer class="flex flex-grow-0 footer">
+    <p class="text-sm text-gray-600">Created by <a href="https://borja.ai">borja</a> using <a
+            href="https://angular.io/">angular</a>, <a href="https://tailwindcss.com">tailwind</a> and <a
+            href="https://supabase.com/">supabase</a>.</p>
+</footer>
