--- a/angular/todo/src/app/components/home/home.component.html
+++ b/angular/todo/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="w-96 text-left">
-    <div class="flex items-baseline">
+<div class="h-full w-96 text-left flex flex-col">
+    <div class="flex-grow-0 flex items-baseline">
         <h1 class="text-3xl font-semibold mb-4">Today</h1>
         <div class="ml-4 space-x-4 text-gray-500">
             <button [class.text-white]="filter == 'active'" class="bg-transparent border-none"
@@ -10,9 +10,9 @@
                 (click)="filter = 'all'">all</button>
         </div>
     </div>
-    <ul>
+    <ul class="flex-grow">
         <app-todo *ngFor="let todo of todos" [todo]="todo" (remove)="remove(todo)"></app-todo>
     </ul>
-    <input #newItem placeholder="What are you doing today?" class="input outline-none focus:border-teal-500"
+    <input #newItem placeholder="What are you doing today?" class="input outline-none focus:border-teal-500 flex-grow-0"
         (keyup.enter)="addItem(newItem.value); newItem.value = ''" id="addItemInput" />
 </div>
