--- a/angular/todo/src/app/components/home/home.component.html
+++ b/angular/todo/src/app/components/home/home.component.html
@@ -3,16 +3,25 @@
         <h1 class="text-3xl font-semibold mb-4">Today</h1>
         <div class="ml-4 space-x-4 text-gray-500">
             <button [class.text-white]="filter == 'active'" class="bg-transparent border-none"
-                (click)="filter = 'active'">active</button>
+                (click)="changeFilter('active')">active</button>
             <button [class.text-white]="filter == 'done'" class="bg-transparent border-none"
-                (click)="filter = 'done'">done</button>
-            <button [class.text-white]="filter == 'all'" class="bg-transparent border-none"
-                (click)="filter = 'all'">all</button>
+                (click)="changeFilter('done')">done</button>
+            <button [class.text-white]="filter == 'archived'" class="bg-transparent border-none"
+                (click)="changeFilter('archived')">archived</button>
         </div>
     </div>
-    <ul class="flex-grow">
-        <app-todo *ngFor="let todo of todos" [todo]="todo" (remove)="remove(todo)"></app-todo>
+    <ul class="flex-grow overflow-y-scroll">
+        <ng-container *ngIf="todos.length">
+            <app-todo *ngFor="let todo of todos" [todo]="todo" (toggleDone)="toggleDone(todo.id, todo.is_done)"
+                (editTodo)="editTodo(todo.id, $event)"></app-todo>
+        </ng-container>
+        <button *ngIf="filter == 'done' && todos.length" (click)="archiveTodos(todos)"
+            class="bg-transparent border-none w-full text-center text-gray-500">archive
+            all</button>
+        <div class="w-full h-full flex justify-center items-center">
+            <span *ngIf="!loading && !todos.length" class="text-gray-400">You don't have any tasks here yet!</span>
+        </div>
     </ul>
     <input #newItem placeholder="What are you doing today?" class="input outline-none focus:border-teal-500 flex-grow-0"
-        (keyup.enter)="addItem(newItem.value); newItem.value = ''" id="addItemInput" />
+        (keyup.enter)="addTodo(newItem.value); newItem.value = ''" id="addItemInput" />
 </div>
