fix some styles

--- a/angular/todo/src/app/components/auth/auth.component.html
+++ b/angular/todo/src/app/components/auth/auth.component.html
@@ -1,4 +1,4 @@
-<div class="w-96 h-full flex flex-col items-center justify-center" aria-live="polite">
+<div class="w-full h-full flex flex-col items-center justify-center" aria-live="polite">
     <h1 class="text-2xl font-semibold">Angular todo</h1>
     <p class="py-6 text-gray-300" *ngIf="sent">Your one time magic link has been sent!</p>
     <div *ngIf="!sent" class="text-center">
