--- a/angular/todo/src/app/components/home/home.component.html
+++ b/angular/todo/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="h-full w-96 text-left flex flex-col">
+<div class="h-full w-full text-left flex flex-col">
     <div class="flex-grow-0 flex items-baseline">
         <h1 class="text-3xl font-semibold mb-4">Today</h1>
         <div class="ml-4 space-x-4 text-gray-500">
