--- a/angular/todo/src/app/app.component.html
+++ b/angular/todo/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="w-full min-h-[100vh] bg-black text-white flex justify-center">
-  <div class="min-h-[100vh] py-20 w-96 flex flex-col items-center">
-    <app-navbar *ngIf="session"></app-navbar>
-    <div class="flex-grow">
+  <div class="min-h-[100vh] pb-24 px-8 pt-8 flex flex-col items-center">
+    <div class="w-full">
+      <app-navbar *ngIf="session"></app-navbar>
+    </div>
+    <div class="w-full flex-grow">
       <router-outlet></router-outlet>
     </div>
     <app-footer></app-footer>
