fix more styles

--- a/angular/todo/src/app/app.component.html
+++ b/angular/todo/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="w-full min-h-[100vh] bg-black text-white flex justify-center">
-  <div class="min-h-[100vh] pb-24 px-8 pt-8 flex flex-col items-center">
+  <div class="min-h-[100vh] pb-24 px-6 pt-6 lg:py-[20%] flex flex-col items-center">
     <div class="w-full">
       <app-navbar *ngIf="session"></app-navbar>
     </div>
