fix account avatar styles

--- a/angular/todo/src/app/components/account/account.component.html
+++ b/angular/todo/src/app/components/account/account.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="updateProfileForm" (ngSubmit)="updateProfile()" class="form-widget">
+<form [formGroup]="updateProfileForm" (ngSubmit)="updateProfile()">
     <app-avatar [avatarUrl]="this.avatarUrl" (upload)="updateAvatar($event)"> </app-avatar>
     <div>
         <label for="email">Email</label>
