--- a/angular/todo/src/styles.css
+++ b/angular/todo/src/styles.css
@@ -26,6 +26,10 @@ label {
     @apply text-sm;
 }
 
+textarea {
+    @apply p-0 h-min resize-none;
+}
+
 .primary {
     @apply w-full bg-green-500 border border-gray-800 rounded-md py-1 px-2 mb-2 font-semibold;
 }
